_build/html/reports/compass.log
Traceback (most recent call last):
  File "C:\Users\rimsha\turingenv\lib\site-packages\jupyter_cache\executors\utils.py", line 51, in single_nb_execution
    executenb(
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\client.py", line 1085, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\rimsha\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 641, in run_until_complete
    return future.result()
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\client.py", line 551, in async_execute
    await self.async_execute_cell(
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\client.py", line 846, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Users\rimsha\turingenv\lib\site-packages\nbclient\client.py", line 748, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
these code can help you to do the microbit compass
------------------

[1;36m  Input [1;32mIn [3][1;36m[0m
[1;33m    these code can help you to do the microbit compass[0m
[1;37m          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (934959829.py, line 1)

